tinified images and fixed whitespace at bottom

--- a/assets/css/ror.css
+++ b/assets/css/ror.css
@@ -20,6 +20,7 @@ html, body {
 
 .main-content-wrapper {
   background-color: var(--darkBlue);
+  height: 95vh;
 }
 
 .item-img {
@@ -49,11 +50,11 @@ html, body {
   }
 }
 
-@media (min-height: 912px) {
+/* @media (min-height: 912px) {
   .main-content-wrapper {
     height: 85vh;
   }
-}
+} */
 
 
 
